@@ -1,3 +1,7 @@
+Fri Feb 12 14:05:21 UTC 2010  Steve Huston  <shuston@riverace.com>
+
+        * ace/Dev_Poll_Reactor.cpp: Fix unused variable warning.
+
 Fri Feb 12 10:36:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/config-g++-common.h:
